# data-aggregator-mcp

./: .gitignore  .mcp.json  CHANGELOG.md  CONTRIBUTING.md  PUBLISH.md  README.md  SECURITY.md  pyproject.toml  server.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  publish-registry.yml  publish.yml
docs/: POSITIONING.md
docs/assets/: architecture.mmd
docs/superpowers/plans/: 2026-05-30-p1-pagination-filters.md  2026-05-31-fetch-breadth-dataone-omicsdi.md  2026-05-31-one-stop-shop-master-plan.md  2026-05-31-p2-relations-orcid-funding.md  2026-05-31-p3-resume-parallel-progress.md  2026-05-31-p4-huggingface.md  2026-05-31-p5-hardening-semantic.md  2026-05-31-phase1-distribution-wave.md  2026-06-01-operate-on-data.md  2026-06-02-hf-datasets-server-operate.md  2026-06-10-a2-p1-query-understanding.md  2026-06-10-a2-p2-multi-query.md  2026-06-10-b10a-provenance-dossier.md  2026-06-10-b10b-run-crate.md  2026-06-10-b2-croissant-1.1.md  2026-06-10-b3-license-preflight.md  2026-06-10-b4-fair-score.md  2026-06-10-b5-ontology-axes.md  2026-06-10-b7-content-dedup.md  2026-06-10-b8-peek.md  2026-06-10-cellxgene-single-cell.md  2026-06-10-p3.5-pdb-gwas-openml.md  2026-06-10-p3.6-dandi-openneuro.md  2026-06-10-p4.1-mesh-disease-expansion.md  2026-06-10-p4.2-mcp-resources.md  2026-06-10-p4.4-retraction-trust.md  2026-06-10-uberon-tissue-expansion.md  2026-06-11-b9-relate-join-hints.md
docs/superpowers/specs/: 2026-05-30-p1-pagination-filters-design.md  2026-05-31-fetch-breadth-dataone-omicsdi-design.md  2026-05-31-p2-relations-orcid-funding-design.md  2026-05-31-p3-resume-parallel-progress-design.md  2026-05-31-p4-huggingface-design.md  2026-05-31-p5-hardening-semantic-design.md  2026-06-01-operate-on-data-design.md  2026-06-02-hf-datasets-server-operate-design.md  2026-06-11-b9-relate-join-hints-design.md
examples/: _demo_stdio.py
scripts/: eval_multi_query.py  eval_multi_query_fixture.json  eval_understand.py  eval_understand_fixture.json  relate_live_check.py
src/data_aggregator_mcp/: __init__.py  __main__.py  _cache.py  _cursor.py  _eutils.py  _http.py  _merge.py  _ratelimit.py  anatomy.py  archive.py  assay.py  cellxgene.py  chemistry.py  citation.py  croissant.py  dandi.py  datacite.py  dataone.py  dataverse.py  dossier.py  dryad.py  duckquery.py  embeddings.py  ena.py  errors.py  fair.py  fetch.py  figshare.py  fulltext.py  geo.py  gwas.py  health.py  hf_datasets_server.py  huggingface.py  idconv.py  license_compat.py  literature.py  llm.py  mesh.py  metabolights.py  (+24 more)
tests/: conftest.py  test__cursor.py  test__eutils.py  test__http.py  test__merge.py  test_anatomy.py  test_archive.py  test_assay.py  test_cache.py  test_cellxgene.py  test_chemistry.py  test_citation.py  test_content_dedup.py  test_croissant.py  test_dandi.py  test_datacite.py  test_dataone.py  test_dataverse.py  test_dossier.py  test_dryad.py  test_duckquery.py  test_embeddings.py  test_ena.py  test_entrypoint_smoke.py  test_errors.py  test_fair.py  test_fetch.py  test_fetch_gate.py  test_figshare.py  test_fulltext.py  test_geo.py  test_gwas.py  test_health.py  test_hf_datasets_server.py  test_http_ratelimit.py  test_huggingface.py  test_idconv.py  test_license_compat.py  test_literature.py  test_live_p5.py  (+33 more)
tests/fixtures/: sample.csv  sample.parquet
