[project]
name = "data-aggregator-mcp"
version = "0.13.0"
description = "Research-data acquisition MCP — find and fetch datasets across archives, omics registries, and literature"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Jaret Arnold", email = "mjarnold1998@gmail.com" }]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
keywords = [
    "mcp",
    "model-context-protocol",
    "datasets",
    "zenodo",
    "datacite",
    "ncbi",
    "sra",
    "geo",
    "bioinformatics",
    "research-data",
]
dependencies = [
    "mcp>=1.0",
    "httpx>=0.27",
    "pydantic>=2.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
    "pytest-cov>=5.0",
    "ruff>=0.3",
    "pyyaml>=6.0",
]

[project.scripts]
data-aggregator-mcp = "data_aggregator_mcp.server:main"

[project.urls]
Homepage = "https://github.com/musharna/data-aggregator-mcp"
Repository = "https://github.com/musharna/data-aggregator-mcp"
Issues = "https://github.com/musharna/data-aggregator-mcp/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/data_aggregator_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"
